# shixu_2026

./: .gitignore  AGENTS.md  四川农业大学 23 级实训项目介绍及前期准备(1).docx
backend/app/: config.py  database.py  main.py
backend/app/models/: category.py  knowledge_chunk.py  user.py
backend/app/routers/: category.py  dashboard.py  database.py  feedback.py  knowledge.py  llm.py
backend/app/schemas/: category.py  feedback.py  knowledge.py  vector.py
backend/app/services/: category_service.py  dashboard_service.py  embedding_service.py  feedback_service.py  knowledge_service.py  vector_service.py
backend/tests/: test_chat_rag_service.py  test_dashboard_service.py  test_embedding_service.py  test_feedback_service.py  test_text_splitter.py  test_vector_service.py
course/day1/: check_game.vbs  u_disk_copy.vbs
course/day1/origin/: check_game.vbs  u_disk_copy.vbs
course/day2/autogui/: main.py  pyproject.toml
course/day2/origin/: main.py
course/day2/qq_send_message/: main.py  pyproject.toml
course/day2/qq_send_message/src/: qq_open.py
course/课程要求/: 1.md
data/policies/: 住房公积金提取指南.md  城市管理投诉处理指南.md  就业创业补贴办理指南.md  居住证办理指南.md
docs/: 03_技术选型说明.md  05_项目交接与后续开发说明.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  style.css
project/: .env.example  README.md  docker-compose.yml
project/backend/: requirements.txt
project/docs/: 01_项目范围说明.md  02_功能模块规划.md  04_项目阶段交接说明.md
project/scripts/: build_vector_index.py
project/tests/: test_check_project.py
scripts/: check_project.py  import_knowledge.py  init_db.py  seed_categories.py
(+30 files in other folders)
